--- a/Number_recognition/Number_recognition.vcxproj.filters
+++ b/Number_recognition/Number_recognition.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Train.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
-    <ClCompile Include="Test.cpp">
+    <ClCompile Include="ImageProcessing.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
