--- a/Number_recognition/Number_recognition.vcxproj.filters
+++ b/Number_recognition/Number_recognition.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="ImageProcessing.cpp">
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
+    <ClCompile Include="VideoProcessing.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
